# lz-compressor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: deflate.c  deflate.h  huffman.c  huffman.h  lz77.c  lz77.h  main.c  stream.c  stream.h
test/: test_deflate.c  test_huffman.c  test_lz77.c  test_stream.c
